Add customer editing function
